--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.alert {
+  position: fixed;
+  z-index: 99;
+  width: 80%;
+  opacity: 95%;
+  margin-left: 10%;
+  margin-top: 4px;
+  padding: 8px;
+}
