--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,12 @@
   margin-top: 4px;
   padding: 8px;
 }
+
+.lease-table {
+  text-align: left;
+}
+
+.lease-table-keys {
+  width: 200px;
+  font-weight: bold;
+}
